# my-chatbot

./: .gitignore  DEPLOYMENT_GUIDE.md  SYMBOL_INTEGRATION.md  TRAINING_AND_DEPLOYMENT.md  TRAINING_GUIDE.md  package-lock.json  package.json
backend/: app.py  config.py  models.py  pyproject.toml  requirements.txt  services.py  symbol_classifier.py  symbol_dataset_generator.py  symbol_helper.py  tactical_analyzer.py  utils.py  verify_model.py
backend/chroma_db/: chroma.sqlite3
backend/symbol_dataset/: class_mapping.json
public/: index.html
src/: App.js  index.css
