[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "alexandros",email = "alex.kyr.triant@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "pdf2image (>=1.17.0,<2.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "langchain-community (>=0.3.31,<0.4.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "langchain-ollama (>=0.3.10,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "chromadb (>=1.1.1,<2.0.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "military-symbol (==2.0.7)",
    "cairosvg (==2.7.1)",
    "torch (>=2.0.0,<3.0.0)",
    "torchvision (>=0.15.0,<1.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ftfy (>=6.1.0,<7.0.0)",
    "regex (>=2023.0.0,<2025.0.0)",
    "ultralytics (>=8.0.0,<9.0.0)",
    "clip @ git+https://github.com/openai/CLIP.git"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
